# IDApTIK

./: .gitignore  0-AI-MANIFEST.a2ml  AGENTS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  ENGINE_EXTRACTION_NOTES.md  GEMINI.md  PROJECT-CONTRIBUTION-PROFILE.adoc  PROJECT-GOVERNANCE-BINDING.adoc  README.md  guix.scm  justfile  k9iser.toml  launcher.sh  mise.toml  rust-toolchain.toml  sonar-project.properties
.github/: CONTRIBUTING.adoc  SECURITY.md
.github/workflows/: ci.yml  codeql.yml
.machine_readable/: 0-AI-MANIFEST.a2ml  PROJECT-BINDING.a2ml
.machine_readable/6a2/: NEUROSYM.a2ml  PLAYBOOK.a2ml
.machine_readable/contractiles/: Adjustfile.a2ml  Intentfile.a2ml  Justfile  Mustfile.a2ml  Trustfile.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/descriptiles/: 0-AI-MANIFEST.a2ml  AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  README.adoc  STATE.a2ml
config/: default.ncl  ghost_lobby_floor.ncl  ghost_lobby_scenario.ncl  grounded_slice.ncl  scenario-schema.ncl  schema.ncl
config/scenario-fixtures/: bad_door_off_boundary.ncl  bad_duplicate_door_id.ncl  bad_support_out_of_range.ncl  bad_too_many_cameras.ncl
crates/idaptik-bevy/: Cargo.toml
crates/idaptik-bevy/src/: driver.rs  hud.rs  keymap.rs  lib.rs  main.rs  net_view.rs  scene.rs  sprites.rs
crates/idaptik-bevy/tests/: interp_parity.rs  net_view_smoke.rs  parity.rs
crates/idaptik-core/: Cargo.toml
crates/idaptik-core/src/: device.rs  interp.rs  lib.rs  network.rs  trace.rs
crates/idaptik-core/src/companion/: coprocessors.rs  definition.rs  equipment.rs  hunger.rs  mod.rs  moletaire.json  music.rs  sim.rs
crates/idaptik-core/src/netsim/: access.rs  addressing.rs  dns.rs  effect.rs  graph.rs  grounded_slice.json  mod.rs  reach.rs  route.rs  session.rs  topology.rs
crates/idaptik-core/src/scenario/: agents.rs  command.rs  common.rs  constants.rs  definition.rs  event.rs  floor_graph.json  floor_graph.rs  ghost_lobby.json  ghost_lobby.rs  ghost_lobby_floor.json  ids.rs  mathf.rs  mod.rs  outcome.rs  rng.rs  seams.rs  snapshot.rs  state.rs  tuning.rs
crates/idaptik-core/src/scenario/actor/: actors.json  belief.rs  mod.rs
crates/idaptik-core/src/scenario/building/: exchange_house.json  exchange_house.rs  exchange_house_run.json  graph.rs  mod.rs  network.rs  sim.rs
crates/idaptik-core/src/scenario/sim/: mod.rs  systems.rs
crates/idaptik-core/tests/: acceptance_endings.rs  acceptance_misdirect_pickpocket.rs  actor_registry.rs  agent_fusion.rs  building_runtime.rs  golden_reset.rs  grounded_slice.rs  interp.rs  json_roundtrip.rs  mechanics_b.rs  moletaire.rs  no_panic_fuzz.rs  phase_asymmetry.rs  replay_determinism.rs  rng_vectors.rs  scoring_grades.rs  session_relay_fixture.rs  snapshot_equivalence.rs  validate_ghost_lobby.rs
crates/idaptik-core/tests/common/: mod.rs
crates/idaptik-ffi/: Cargo.toml  cbindgen.toml
crates/idaptik-ffi/include/: idaptik.h
crates/idaptik-ffi/src/: lib.rs
crates/idaptik-fyrox/: Cargo.toml
crates/idaptik-fyrox/src/: main.rs
crates/idaptik-net/: Cargo.toml
crates/idaptik-net/src/: envelope.rs  error.rs  interactive.rs  lib.rs  live.rs  lockstep.rs  phoenix.rs  seat.rs  session.rs  transport.rs  ws.rs
crates/idaptik-tui/: Cargo.toml
crates/idaptik-tui/src/: app.rs  config.rs  export.rs  headless.rs  input.rs  keymap.rs  lib.rs  main.rs  render.rs  replay.rs  script.rs
crates/idaptik-tui/src/net/: app.rs  mod.rs  render.rs
crates/idaptik-tui/tests/: headless_smoke.rs  net_smoke.rs
crates/idaptik-tui/tests/fixtures/: caught.json  clean_extract.json  pivot_building.json  pivot_upstream.json
docs/: ARCHITECTURE.md  PROJECT-ASSURANCE-PROFILE.adoc  level-design.md
docs/adr/: 0001-toolchain-and-runtime-management.md  0002-multiplayer-transport.md  0003-engine-strategy.md  0004-deterministic-event-sourced-scenario-sim.md  0005-session-relay-topology.md  0006-gossamer-host-and-burble-transport.md  README.md
docs/design/: README.adoc  idaptik-landing-page.html
docs/dev-notes/: README.md  roadmap-2026-07.md
docs/scenarios/: ghost-lobby.md
fixtures/session_relay/: capture_script.json  commands.json  events.json  live_script.json
scripts/: bootstrap.sh  doctor.sh  install-idris2.sh  loopback_check.sh
server/: README.md  mix.exs
server/config/: config.exs  dev.exs  runtime.exs  test.exs
(+7 files in other folders)
