[package]
name = "idaptik-bevy"
description = "Bevy rendering frontend for IDApTIK (evaluation; see ADR-0003)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# On Linux, Bevy needs system libraries (alsa, udev, windowing) to build/run —
# install them with `just bevy-linux-deps`.
[dependencies]
idaptik-core = { workspace = true }
bevy = { workspace = true }
