[package]
name = "idaptik-core"
description = "Engine-agnostic gameplay truth for IDApTIK: the network simulation the hacker plays against."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
proptest = "1"
